Improve buttons display + set columns sizes

--- a/browser/css/dark.css
+++ b/browser/css/dark.css
@@ -1104,7 +1104,9 @@ line {
 .button:hover,
 .button_right:hover,
 .buttonSelector:hover,
-.button2:hover {
+.button2:hover,
+.double_button__part1:hover,
+.double_button__part2:hover {
   background: #333333;
   color: #fdf6e3;
   cursor: pointer;
@@ -1235,11 +1237,10 @@ div.button {
   margin-right: -27px;
 }
 .button2,
-.button2_next {
-  border: solid;
-  border-width: 1px;
+.double_button {
   padding: 3px;
   margin: 3px;
+  border-radius: 5px;
   display: inline-block;
   cursor: pointer;
   background: #333333;
@@ -1248,8 +1249,23 @@ div.button {
   padding-left: 10px;
   padding-right: 10px;
 }
-.button2_next {
-  margin-left: -8px;
+.double_button {
+  padding: 0;
+  display: inline-flex;
+  cursor: pointer;
+}
+.double_button__part1,
+.double_button__part2 {
+  display: inline-flex;
+  align-items: center;
+  padding: 3px;
+}
+.double_button__part1 {
+  padding-left: 5px;
+}
+.double_button__part2 {
+  background: rgba(0, 0, 0, 0.05);
+  padding-right: 5px;
 }
 .clipboard-button {
   margin-left: -5px;
