--- a/server/py4web/apps/vidjil/templates/sample_set/custom.html
+++ b/server/py4web/apps/vidjil/templates/sample_set/custom.html
@@ -116,10 +116,10 @@
 <div class="db_block">
 
     <div class="db_block_right">
-        <span class="button2" onclick="db.call('sample_set/multi_sample_stats', {'results_ids': db.getListInput('custom_result[]') })" >preview / quality control</span>
+        <span class="button2" onclick="db.call('sample_set/multi_sample_stats', {'results_ids': db.getListInput('custom_result[]'), 'sample_set_id': [[=request.query['id']]] })" >preview / quality control</span>
         <span class="button2" 
           [[if request.query["id"] != None: ]]
-            onclick="myUrl.loadCustomUrl(db, {'sample_set_id':[[=request.query["id"] ]] })" 
+            onclick="myUrl.loadCustomUrl(db, {'sample_set_id':[[=request.query['id'] ]] })" 
           [[else:]]
             onclick="myUrl.loadCustomUrl(db, undefined)" 
           [[pass]]
